Задания на паре

--- a/Sockets.csproj
+++ b/Sockets.csproj
@@ -31,4 +31,7 @@
     <EmbeddedResource Remove="MvcSockets\**" />
     <None Remove="MvcSockets\**" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
 </Project>
